kubernetes/istio-0.8.x/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingressgateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - hello.test.domain.ca
    - hello.test.domain.ca:443
    port:
      name: https-hello
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
  - hosts:
    - hello.test.domain.ca
    - hello.test.domain.ca:80
    port:
      name: http-hello
      number: 80
      protocol: HTTP
